fix: wrapped the content into a section, gave it the class .card, sdjusted layout so that .card is vertically centered and has a border-radius + adjusted flex layout for card wrapper as the button and price where to high

--- a/src/stylesheets/_card.scss
+++ b/src/stylesheets/_card.scss
@@ -4,15 +4,11 @@
 
 //GENERAL
 .card {
-    min-height: 100vh;
-
     width: 93.33vw;
     overflow: hidden;
     
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
 
     border-radius: $space-100;
 
@@ -43,6 +39,7 @@
 
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
     gap: $space-300;
 
     @media (min-width: $breakpoint-tablet) {
