--- a/src/stylesheets/_general.scss
+++ b/src/stylesheets/_general.scss
@@ -9,3 +9,11 @@ body {
     flex-direction: column;
     align-items: center;
 }
+
+main {
+    min-height: 100vh;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
